# YOLO-Detection

./: .gitignore  README.md  dataset.yaml  detect_ros.py  readme.md  train_yolo.py
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/d2p/: d2p_node
devel/lib/pkgconfig/: d2p.pc
devel/share/d2p/cmake/: d2pConfig.cmake
files/: modfied_depth
runs/detect/my_data4/: args.yaml  events.out.tfevents.1735211808.R9000.6016.0  results.csv
runs/detect/trian/: args.yaml
runs/detect/trian2/: args.yaml  results.csv
src/d2p/: CMakeLists.txt  package.xml
src/d2p/config/: detector_params.yaml  rosconsole.conf
src/d2p/include/d2p/: Tracker.h  TrackerState.h  target_detector.h
src/d2p/launch/: d2p.launch  rviz.launch
src/d2p/rviz/: detector.rviz
src/d2p/scripts/: fake_odom_publisher.py
src/d2p/src/: Tracker.cpp  TrackerState.cpp  main.cpp  target_detector.cpp
src/yolov11_tensorrt_ros/config/: yolov11n.yaml
src/yolov11_tensorrt_ros/launch/: detector.launch
src/yolov11_tensorrt_ros/onnx_model/: export.py
src/yolov11_tensorrt_ros/src/: infer.cpp
